# Swarm_robotics

./: CMakeLists.txt  README.md  basic_controller.cpp  package.xml
StateFlow/: finalproject2.slx  results.slx  results.slx.autosave  testSimROS.slx
StateFlow/slprj/_jitprj/: jitEngineAccessInfo.mat  swqS3J7hyYi2GPuIIld3JqC.l  swqS3J7hyYi2GPuIIld3JqC.mat
StateFlow/slprj/_sfprj/precompile/: autoInferAccessInfo.mat  m8at8OoN2mebTsvMFax3GE.mat
StateFlow/slprj/_sfprj/testSimROS/_self/sfun/info/: binfo.mat
config/: irobot_control.yaml  irobot_control.ymal
include/multiAgent_system_modeling/: multi_agent_controller.h
launch/: joint_controller.launch  spawn_robot.launch  swarm_launch.launch  swarm_robotics.launch
model/: axis.urdf.xacro  wheel.urdf.xacro
src/: basic_controller.cpp  multi_agent_control_main.cpp  multi_agent_controller.cpp  test_main.cpp
swarm_robotics_urdf/: CMakeLists.txt  README.md  package.xml
swarm_robotics_urdf/src/launch/: swarm_launch.launch  swarm_robotics.launch
swarm_robotics_urdf/src/urdf/: swarm1.xacro  swarm2.xacro  swarm3.xacro  swarm4.xacro  swarm5.xacro  swarm6.xacro  swarm_1.xacro  swarm_2.xacro  swarm_3.xacro  swarm_4.xacro  swarm_5.xacro  swarm_6.xacro  test_try.xacro
swarm_robotics_urdf/urdf/: irobot.urdf.xacro  swarm3.xacro
urdf/: iRobot.urdf  iRobot.xacro  iRobot1.urdf  iRobot1.xacro  iRobot2.urdf  iRobot3.urdf  iRobot4.urdf  test_try.xacro
